--- a/main.ipynb
+++ b/main.ipynb
@@ -89,63 +89,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'open_api_key'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[6], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mdotenv\u001b[39;00m \u001b[39mimport\u001b[39;00m dotenv_values\n\u001b[1;32m      3\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mos\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m os\u001b[39m.\u001b[39menviron[\u001b[39m'\u001b[39m\u001b[39mOPEN_API_KEY\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m dotenv_values(\u001b[39m'\u001b[39;49m\u001b[39m.env\u001b[39;49m\u001b[39m'\u001b[39;49m)[\u001b[39m'\u001b[39;49m\u001b[39mopen_api_key\u001b[39;49m\u001b[39m'\u001b[39;49m]\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'open_api_key'"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "from langchain.indexes import VectorstoreIndexCreator\n",
-    "from dotenv import dotenv_values\n",
-    "import os\n",
-    "os.environ['OPEN_API_KEY'] = dotenv_values('.env')['open_api_key']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain.document_loaders import CSVLoader, TextLoader\n",
-    "\n",
-    "maradmins = CSVLoader('./MARADMINS/madmin_scrape.csv')"
+    "from langchain.indexes import VectorstoreIndexCreator\n",
+    "from dotenv import dotenv_values\n",
+    "import os\n",
+    "os.environ['OPENAI_API_KEY'] = dotenv_values('.env')['openai_api_key']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.document_loaders import TextLoader\n",
+    "\n",
+    "maradmins = TextLoader('./MARADMINS/madmin_scrape.txt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "index = VectorstoreIndexCreator().from_loaders([maradmins])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValidationError",
-     "evalue": "1 validation error for OpenAIEmbeddings\n__root__\n  Did not find openai_api_key, please add an environment variable `OPENAI_API_KEY` which contains it, or pass  `openai_api_key` as a named parameter. (type=value_error)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValidationError\u001b[0m                           Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[5], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m index \u001b[39m=\u001b[39m VectorstoreIndexCreator()\u001b[39m.\u001b[39mfrom_loaders([maradmins])\n",
-      "File \u001b[0;32m/opt/homebrew/lib/python3.9/site-packages/pydantic/main.py:339\u001b[0m, in \u001b[0;36mpydantic.main.BaseModel.__init__\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32m/opt/homebrew/lib/python3.9/site-packages/pydantic/main.py:1066\u001b[0m, in \u001b[0;36mpydantic.main.validate_model\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32m/opt/homebrew/lib/python3.9/site-packages/pydantic/fields.py:439\u001b[0m, in \u001b[0;36mpydantic.fields.ModelField.get_default\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32m/opt/homebrew/lib/python3.9/site-packages/pydantic/main.py:341\u001b[0m, in \u001b[0;36mpydantic.main.BaseModel.__init__\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mValidationError\u001b[0m: 1 validation error for OpenAIEmbeddings\n__root__\n  Did not find openai_api_key, please add an environment variable `OPENAI_API_KEY` which contains it, or pass  `openai_api_key` as a named parameter. (type=value_error)"
-     ]
+     "data": {
+      "text/plain": [
+       "' The Marine Corps will discontinue the utilization, offering, and execution of the 6.8 percent discounted lump sum Assignment Incentive Pay (AIP) initiative effective 1 July 2023.'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "index = VectorstoreIndexCreator().from_loaders([maradmins])"
+    "index.query(\"What is the status of the Assignment Incentive Pay (AIP) initiative?\")"
    ]
   }
  ],
